--- a/attestation-doc-validation/Makefile.toml
+++ b/attestation-doc-validation/Makefile.toml
@@ -29,7 +29,7 @@ dependencies = ["test", "test_time_sensitive"]
 
 [tasks.build]
 command = "cargo"
-args = ["build"]
+args = ["build", "--locked"]
 
 [tasks.ci]
 dependencies = ["lint","format","check","test_ci","build"]
