--- a/node-attestation-bindings/package.json
+++ b/node-attestation-bindings/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "artifacts": "napi artifacts",
-    "build": "napi build --platform --release",
+    "build": "napi build --platform --release --cargo-flags --fixed",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "ava",
