--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
   "attestation-doc-validation",
-  "python-attestation-bindings",
+  #"python-attestation-bindings",
   "node-attestation-bindings",
   "kotlin-attestation-bindings"
 ]
