--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -55,5 +55,7 @@ jobs:
       - uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release -o dist --universal2 --find-interpreter
+          args: --release -o dist --find-interpreter --target universal2-apple-darwin
           working-directory: python-attestation-bindings
+          env:
+            PYO3_CROSS_PYTHON_VERSION: 3.9
