--- a/.github/workflows/build-and-publish-swift-bindings.yml
+++ b/.github/workflows/build-and-publish-swift-bindings.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: Install Rust
         run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       
       - name: Build XCFramework
