[SPE-883] Use nightly and install stable for aarch64-apple-ios-sim

--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -8,6 +8,8 @@ env:
   push:
     branches:
       - main
+    branches-ignore:
+      - "donal/spe-883-add-ci-workflow-to-publish-swift-attestation-bindings"
     tags:
       - "node/v*"
     paths-ignore:
@@ -16,7 +18,9 @@ env:
       - "**/*.gitignore"
       - .editorconfig
       - docs/**
-  pull_request: null
+  pull_request:
+    branches-ignore:
+      - "donal/spe-883-add-ci-workflow-to-publish-swift-attestation-bindings"
 jobs:
   build:
     strategy:
