--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    branches-ignore:
+      - "donal/spe-883-add-ci-workflow-to-publish-swift-attestation-bindings"
     tags:
       - "python/v*"
   pull_request:
+    branches-ignore:
+      - "donal/spe-883-add-ci-workflow-to-publish-swift-attestation-bindings"
   workflow_dispatch:
 
 jobs:
