--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -280,7 +280,7 @@ jobs:
           run: |
             set -e
             apt-get install -y libfaketime
-            export FAKETIME="1695050165" 
+            export FAKETIME="2023-09-18 15:16:05" 
             LD_PRELOAD=/usr/lib/aarch64-linux-gnu/faketime/libfaketime.so.1 yarn test
             ls -la
   # test-linux-aarch64-musl-binding:
@@ -315,7 +315,7 @@ jobs:
   #         run: |
   #           apk upgrade ; apk update ; apk add nodejs npm yarn
   #           apk add libfaketime --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
-  #           export FAKETIME="1695050165" 
+  #           export FAKETIME="2023-09-18 15:16:05" 
   #           LD_PRELOAD=/usr/lib/faketime/libfaketime.so.1 yarn test || exit 1
   test-linux-arm-gnueabihf-binding:
     name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
@@ -355,7 +355,7 @@ jobs:
           run: |
             set -e
             apt-get install -y libfaketime
-            export FAKETIME="1695050165" 
+            export FAKETIME="2023-09-18 15:16:05" 
             LD_PRELOAD=/usr/lib/arm-linux-gnueabihf/faketime/libfaketime.so.1 yarn test
             ls -la
   universal-macOS:
