--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -276,11 +276,11 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: ghcr.io/napi-rs/napi-rs/nodejs:aarch64-${{ matrix.node }}
-          options: "-v ${{ github.workspace }}/${{ env.SUBDIRECTORY }}:/build -v ${{ github.workspace }}/test-specs/beta:/test-specs/beta -v ${{ github.workspace }}/test-data/beta:/test-data/beta -w /build"
+          options: "-v ${{ github.workspace }}/${{ env.SUBDIRECTORY }}:/build -v ${{ github.workspace }}/test-specs:/test-specs -v ${{ github.workspace }}/test-data:/test-data -w /build"
           run: |
             set -e
             apt-get install -y libfaketime
-            export FAKETIME="2023-01-18 15:15:00" 
+            export FAKETIME="2023-09-18 15:16:05" 
             LD_PRELOAD=/usr/lib/aarch64-linux-gnu/faketime/libfaketime.so.1 yarn test
             ls -la
   # test-linux-aarch64-musl-binding:
@@ -315,7 +315,7 @@ jobs:
   #         run: |
   #           apk upgrade ; apk update ; apk add nodejs npm yarn
   #           apk add libfaketime --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
-  #           export FAKETIME="2023-01-18 15:15:00" 
+  #           export FAKETIME="2023-09-18 15:16:05" 
   #           LD_PRELOAD=/usr/lib/faketime/libfaketime.so.1 yarn test || exit 1
   test-linux-arm-gnueabihf-binding:
     name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
@@ -351,11 +351,11 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: ghcr.io/napi-rs/napi-rs/nodejs:armhf-${{ matrix.node }}
-          options: "-v ${{ github.workspace }}/${{ env.SUBDIRECTORY }}:/build -v ${{ github.workspace }}/test-specs/beta:/test-specs/beta -v ${{ github.workspace }}/test-data/beta:/test-data/beta -w /build"
+          options: "-v ${{ github.workspace }}/${{ env.SUBDIRECTORY }}:/build -v ${{ github.workspace }}/test-specs/ga:/test-specs/ga -v ${{ github.workspace }}/test-data:/test-data -w /build"
           run: |
             set -e
             apt-get install -y libfaketime
-            export FAKETIME="2023-01-18 15:15:00" 
+            export FAKETIME="2023-09-18 15:16:05" 
             LD_PRELOAD=/usr/lib/arm-linux-gnueabihf/faketime/libfaketime.so.1 yarn test
             ls -la
   universal-macOS:
