--- a/node-attestation-bindings/npm/darwin-arm64/package.json
+++ b/node-attestation-bindings/npm/darwin-arm64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evervault-attestation-bindings-darwin-arm64",
+  "name": "@evervault/attestation-bindings-darwin-arm64",
   "version": "0.0.0",
   "os": [
     "darwin"
