--- a/node-attestation-bindings/npm/linux-arm-gnueabihf/package.json
+++ b/node-attestation-bindings/npm/linux-arm-gnueabihf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evervault-attestation-bindings-linux-arm-gnueabihf",
+  "name": "@evervault/attestation-bindings-linux-arm-gnueabihf",
   "version": "0.0.0",
   "os": [
     "linux"
