--- a/node-attestation-bindings/npm/linux-arm64-gnu/package.json
+++ b/node-attestation-bindings/npm/linux-arm64-gnu/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evervault-attestation-bindings-linux-arm64-gnu",
+  "name": "@evervault/attestation-bindings-linux-arm64-gnu",
   "version": "0.0.0",
   "os": [
     "linux"
