--- a/node-attestation-bindings/npm/win32-x64-msvc/package.json
+++ b/node-attestation-bindings/npm/win32-x64-msvc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evervault-attestation-bindings-win32-x64-msvc",
+  "name": "@evervault/attestation-bindings-win32-x64-msvc",
   "version": "0.0.0",
   "os": [
     "win32"
