--- a/swift-attestation-bindings/Info.plist
+++ b/swift-attestation-bindings/Info.plist
@@ -32,6 +32,8 @@
 			<string>simulator</string>
 		</dict>
 	</array>
+	<key>MinimumOSVersion</key>
+	<string>8.0</string>
 	<key>CFBundlePackageType</key>
 	<string>XFWK</string>
 	<key>XCFrameworkFormatVersion</key>
