chore: add minimum os supported version to swift bindings (#90)
* update remove references to cage

* commit updated bindings file

* fix: Add README and update attestation bindings with plist info

* reafactor: set correct minosversion

* fix: add no mangle to bindings lib

* refactor: update README.md

--- a/swift-attestation-bindings/Info.plist
+++ b/swift-attestation-bindings/Info.plist
@@ -32,6 +32,8 @@
 			<string>simulator</string>
 		</dict>
 	</array>
+	<key>MinimumOSVersion</key>
+	<string>19.0</string>
 	<key>CFBundlePackageType</key>
 	<string>XFWK</string>
 	<key>XCFrameworkFormatVersion</key>
