--- a/swift-attestation-bindings/ios/Info.plist
+++ b/swift-attestation-bindings/ios/Info.plist
@@ -20,5 +20,7 @@
 	<string>0.1.1</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
+	<key>MinimumOSVersion</key>
+	<string>19.0</string>
 </dict>
 </plist>
