--- a/.github/workflows/build-and-deploy-swift-bindings.yml
+++ b/.github/workflows/build-and-deploy-swift-bindings.yml
@@ -15,6 +15,8 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install Rust Targets
+        run: rustup target add aarch64-apple-ios x86_64-apple-ios aarch64-apple-ios-sim
 
       - name: Build XCFramework
         run: ./swift-attestation-bindings/build-xcframework.sh
