--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           args: --release --sdist -o dist --find-interpreter
           working-directory: python-attestation-bindings
@@ -24,7 +24,7 @@ jobs:
       - uses: docker/setup-qemu-action@v1  
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           target: armv7-unknown-linux-gnueabihf
           args: --release --sdist -o dist --find-interpreter
@@ -32,7 +32,7 @@ jobs:
           rust-toolchain: 1.79.0 
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           target: aarch64-unknown-linux-gnu
           args: --release --sdist -o dist --find-interpreter
@@ -40,7 +40,7 @@ jobs:
           rust-toolchain: 1.79.0 
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           target: aarch64-unknown-linux-musl
           args: --release --sdist -o dist --find-interpreter
