--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -16,32 +16,36 @@ jobs:
       - uses: actions/checkout@v3
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           args: --release --sdist -o dist --find-interpreter
           working-directory: python-attestation-bindings
+          rust-toolchain: 1.79.0 
       - uses: docker/setup-qemu-action@v1  
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           target: armv7-unknown-linux-gnueabihf
           args: --release --sdist -o dist --find-interpreter
           working-directory: python-attestation-bindings
+          rust-toolchain: 1.79.0 
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: '2_28'
           command: build
           target: aarch64-unknown-linux-gnu
           args: --release --sdist -o dist --find-interpreter
           working-directory: python-attestation-bindings 
+          rust-toolchain: 1.79.0 
       - uses: PyO3/maturin-action@v1
         with:
-          manylinux: auto
+          manylinux: 'musllinux_1_2'
           command: build
           target: aarch64-unknown-linux-musl
           args: --release --sdist -o dist --find-interpreter
-          working-directory: python-attestation-bindings      
+          working-directory: python-attestation-bindings     
+          rust-toolchain: 1.79.0 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -57,6 +61,7 @@ jobs:
           command: build
           args: --release -o dist --find-interpreter
           working-directory: python-attestation-bindings
+          rust-toolchain: 1.79.0 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -72,6 +77,7 @@ jobs:
           command: build
           args: --release -o dist --find-interpreter --target universal2-apple-darwin
           working-directory: python-attestation-bindings
+          rust-toolchain: 1.79.0 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -112,3 +118,4 @@ jobs:
           command: upload
           args: --skip-existing *
           working-directory: python-attestation-bindings/wheels
+          rust-toolchain: 1.79.0 
