--- a/.github/workflows/publish-rust-crate.yml
+++ b/.github/workflows/publish-rust-crate.yml
@@ -1,10 +1,8 @@
 name: Release rust crate
-
 on:
   push:
     tags:
-      - "rust/v*"
-
+      - 'rust/v*'
 jobs:
   get-version:
     runs-on: ubuntu-latest
@@ -13,8 +11,7 @@ jobs:
     steps:
       - name: Get version from tag
         id: get-version
-        run: |
-          echo "using version tag ${GITHUB_REF:16}"
+        run: echo "using version tag ${GITHUB_REF:16}"
   assert-matching-version:
     runs-on: ubuntu-latest
     needs: [get-version]
@@ -48,7 +45,8 @@ jobs:
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Run CI Tasks with backtrace
-        run: cd attestation-doc-validation ; cargo make ci
+        working-directory: attestation-doc-validation
+        run: cargo make ci
   dry-run-publish:
     runs-on: ubuntu-latest
     needs: [get-version, assert-matching-version, run-ci-checks]
@@ -61,9 +59,8 @@ jobs:
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Package and Publish Cargo to registry
-        run: |
-          cd attestation-doc-validation
-          cargo publish --dry-run --token ${{ secrets.CARGO_AUTH_TOKEN }}
+        working-directory: attestation-doc-validation
+        run: cargo publish --dry-run --token ${{ secrets.CARGO_AUTH_TOKEN }}
   publish-crate:
     runs-on: ubuntu-latest
     environment: public-release
@@ -77,6 +74,5 @@ jobs:
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Package and Publish Cargo to registry
-        run: |
-          cd attestation-doc-validation
-          cargo publish --token ${{ secrets.CARGO_AUTH_TOKEN }}
+        working-directory: attestation-doc-validation
+        run: cargo publish --token ${{ secrets.CARGO_AUTH_TOKEN }}
