chore: add workflow to test wasm-pack builds in ci

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
   "python-attestation-bindings",
   "node-attestation-bindings",
   "swift-attestation-bindings",
-  "kotlin-attestation-bindings"
+  "kotlin-attestation-bindings",
+  "wasm-attestation-bindings"
 ]
 
 [profile.release]
