--- a/wasm-attestation-bindings/Cargo.toml
+++ b/wasm-attestation-bindings/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.0.0"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-attestation-doc-validation = { path = "../attestation-doc-validation" }
+attestation-doc-validation = { path = "../attestation-doc-validation" } #, features = ["wasm_support"] }
 base64 = "0.22.1"
+console_error_panic_hook = "0.1.7"
 wasm-bindgen = "0.2.99"
