--- a/node-attestation-bindings/Makefile.toml
+++ b/node-attestation-bindings/Makefile.toml
@@ -32,7 +32,7 @@ sudo apt-get install -y libfaketime
 dependencies = ["build", "add_lib_faketime"]
 env = { "LD_PRELOAD" = "/usr/lib/x86_64-linux-gnu/faketime/libfaketime.so.1", "FAKETIME" = "2023-09-18 15:16:05" }
 command = "yarn"
-args = ["test"]
+args = ["test", "--", "--verbose"]
 
 [tasks.ci]
 dependencies = ["lint","format","test"]
