--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -25,6 +25,22 @@ jobs:
         run: cargo make ci
         env:
           RUST_BACKTRACE: full
+  build_wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install latest stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.79.0
+          override: true
+          components: rustfmt, clippy
+      - name: Install wasmpack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - name: Build wasm bindings with wasm-pack
+        run: wasm-pack build ./wasm-attestation-bindings -s evervault --out-name index
+        env:
+          RUST_BACKTRACE: full
   lint_and_test_node:
     runs-on: ubuntu-latest
     steps:
@@ -58,6 +74,7 @@ jobs:
           command: build
           args: --release -o dist --find-interpreter
           working-directory: python-attestation-bindings
+          rust-toolchain: '1.79.0'
         env:
           PYO3_CROSS_PYTHON_VERSION: '3.9'
       - name: Build and Test
